--- a/Resources/Private/Backend/Partials/PageLayout/LanguageColumns.html
+++ b/Resources/Private/Backend/Partials/PageLayout/LanguageColumns.html
@@ -1,6 +1,6 @@
 <html
     lang="en"
-    xmlns:deepl="http://typo3.org/ns/TimDreier/TdDeepltranslate/ViewHelpers"
+    xmlns:deepl="http://typo3.org/ns/WebVision/WvDeepltranslate/ViewHelpers"
     xmlns:f="http://typo3.org/ns/TYPO3Fluid/Fluid/ViewHelpers"
 >
 
@@ -154,10 +154,10 @@
             <f:alias map="{deeplLanguages: '{deepl:deeplTranslate(context: \'{context}\')}'}">
                 <f:if condition="{deeplLanguages -> f:count()} > 0">
                     <div class="col row">
-                        <label class="col-sm-4 col">{f:translate(key: 'backend.label', extensionName: 'td_deepltranslate')}</label>
+                        <label class="col-sm-4 col">{f:translate(key: 'backend.label', extensionName: 'wv_deepltranslate')}</label>
                         <div class="col col-sm-8">
                             <select class="form-select" name="createNewLanguage" data-global-event="change" data-action-navigate="$value">
-                                <option><f:translate key="backend.label" extensionName="td_deepltranslate" /></option>
+                                <option><f:translate key="backend.label" extensionName="wv_deepltranslate" /></option>
                                 <f:for each="{deeplLanguages}" as="languageName" key="url">
                                     <option value="{url}">{languageName}</option>
                                 </f:for>
@@ -174,10 +174,10 @@
         <f:if condition="{deeplLanguages -> f:count()} > 0">
             <div class="row row-cols-auto align-items-end g-3 mb-3">
                 <div class="col row">
-                    <label class="col-sm-4 col">{f:translate(key: 'backend.label', extensionName: 'td_deepltranslate')}</label>
+                    <label class="col-sm-4 col">{f:translate(key: 'backend.label', extensionName: 'wv_deepltranslate')}</label>
                     <div class="col col-sm-8">
                         <select class="form-select" name="createNewLanguage" data-global-event="change" data-action-navigate="$value">
-                            <option><f:translate key="pages.glossary.translate" extensionName="td_deepltranslate" /></option>
+                            <option><f:translate key="pages.glossary.translate" extensionName="wv_deepltranslate" /></option>
                             <f:for each="{deeplLanguages}" as="languageName" key="url">
                                 <option value="{url}">{languageName}</option>
                             </f:for>
